--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,54 +1,38 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "type": "java",
-      "name": "Test",
-      "request": "launch",
-      "mainClass": "Test",
-      "projectName": "Tien_Len_v2_2fc24384"
-    },
-    {
-      "type": "java",
-      "name": "CardView",
-      "request": "launch",
-      "mainClass": "CardView",
-      "projectName": "Tien_Len_v2_2fc24384",
-      "vmArgs": "--module-path \"D:/lib/javafx-sdk-22.0.2/lib\" --add-modules javafx.controls,javafx.fxml"
-    },
-    {
-      "type": "java",
-      "name": "Server",
-      "request": "launch",
-      "mainClass": "Server.Server",
-      "projectName": "Tien_Len_v2_2fc24384",
-      "vmArgs": "--module-path \"D:/lib/javafx-sdk-22.0.2/lib\" --add-modules javafx.controls,javafx.fxml"
-    },
-    {
-      "type": "java",
-      "name": "Client",
-      "request": "launch",
-      "mainClass": "Client.Client",
-      "projectName": "Tien_Len_v2_2fc24384",
-      "vmArgs": "--module-path \"D:/lib/javafx-sdk-22.0.2/lib\" --add-modules javafx.controls,javafx.fxml"
-    },
-    {
-      "type": "java",
-      "name": "Client",
-      "request": "launch",
-      "mainClass": "Client",
-      "projectName": "Tien_Len_v2_2fc24384",
-      "vmArgs": "--module-path \"D:/lib/javafx-sdk-22.0.2/lib\" --add-modules javafx.controls,javafx.fxml"
-    },
-    {
-      "type": "java",
-      "name": "Current File",
-      "request": "launch",
-      "mainClass": "${file}",
-      "vmArgs": "--module-path \"D:/lib/javafx-sdk-22.0.2/lib\" --add-modules javafx.controls,javafx.fxml"
-    }
-  ]
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "type": "java",
+            "name": "Current File",
+            "request": "launch",
+            "mainClass": "${file}"
+        },
+        {
+            "type": "java",
+            "name": "Client",
+            "request": "launch",
+            "mainClass": "Client.Client",
+            "projectName": "tien_len_v2_3e947edd",
+            "vmArgs": "--module-path \"D:/lib/javafx-sdk-22.0.2/lib\" --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
+            "name": "Server",
+            "request": "launch",
+            "mainClass": "Server.Server",
+            "projectName": "tien_len_v2_3e947edd",
+            "vmArgs": "--module-path \"D:/lib/javafx-sdk-22.0.2/lib\" --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
+            "name": "Test",
+            "request": "launch",
+            "mainClass": "Test",
+            "projectName": "tien_len_v2_3e947edd",
+            "vmArgs": "--module-path \"D:/lib/javafx-sdk-22.0.2/lib\" --add-modules javafx.controls,javafx.fxml"
+        }
+    ]
 }
